tests/baselines/reference/parser_continueNotInIterationStatement2.errors.txt
==== tests/cases/compiler/parser_continueNotInIterationStatement2.ts (1 errors) ====
    while (true) {
      function f() {
        continue;
        ~~~~~~~~~
!!! parser_continueNotInIterationStatement2.ts(3,5): error TS1107: Jump target cannot cross function boundary.
      }
    }